syntax = "proto3";

package com.rocky.boot.grpc.interfaces;

option java_multiple_files = true;
option java_package = "com.rocky.boot.grpc.interfaces";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message Proto3DefaultValue {
    string str = 1;
    int32 number = 2;
    bool flag = 3;
}